test/failing/context-nonexist.trunnel

struct x WITH context c {
  u8 foo[c.bar];
}
